# XinyiIMU5340FirmWare

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README之前Claude的失败经历.MD  README之前Claude的失败经历.MD.tmp  archtecture.md  build_log.txt  build_output.txt  build_output2.txt  index.html  musingdrift_api.http  prj.conf  prj_fota.conf  sysbuild.cmake  tmp_bmi160_text.txt  tmp_bmi160_text_all.txt  tmp_bmi160_text_clean.txt  tmp_bmi160_windows.txt  tmp_pmu_strings.txt  tmp_settings.txt  uicr_backup.hex  web_console.html
.github/: copilot-instructions.md
.github/workflows/: build_firmware.yaml
boards/: nrf5340dk_nrf5340_XinyiIMU.overlay
include/: openearable_common.h
musingdrift-copilot-extension/: .vscodeignore  README.md  package.json
musingdrift-copilot-extension/src/: extension.ts
src/: openearable_common.c
src/Battery/: BQ25120a.cpp  BQ27220.cpp  CMakeLists.txt  PowerManager.cpp  PowerManager.h  power_sequence.c
src/ParseInfo/: SensorScheme.cpp
src/SensorManager/: Baro.cpp  BoneConduction.cpp  IMU.cpp  IMU.h  Microphone.c  Microphone.cpp  (+4 more)
src/bluetooth/: CMakeLists.txt  Kconfig.defaults
src/bluetooth/bt_management/: bt_mgmt.c  bt_mgmt.h
src/bluetooth/bt_management/advertising/: bt_mgmt_adv.c
src/bluetooth/bt_management/controller_config/: bt_mgmt_ctlr_cfg.c
src/bluetooth/gatt_services/: CMakeLists.txt  audio_config_service.c  battery_service.cpp  led_service.cpp  meow_ctrl_service.cpp  meow_ctrl_service.h  sensor_service.c
sysbuild/: CMakeLists.txt
sysbuild/hci_rpmsg/: prj.conf
sysbuild/ipc_radio/: prj.conf
unicast_server/: main.cpp
(+34 files in other folders)
